feat: adds react-titles to project dependancy

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
 
 body::after {
   content: "";
-  background-image: url("/background-img.jpg");
+  background-image: url("/images/background-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
